20080311
 - (djm) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/10/29 06:57:13
     [regress/Makefile regress/localcommand.sh]
     Add simple regress test for LocalCommand; ok djm@
   - jmc@cvs.openbsd.org 2007/11/25 15:35:09
     [regress/agent-getpeereid.sh regress/agent.sh]
     more existant -> existent, from Martynas Venckus;
     pfctl changes: ok henning
     ssh changes: ok deraadt

20080311
 - (dtucker) [auth-pam.c monitor.c session.c sshd.c] Bug #926: Move
   pam_open_session and pam_close_session into the privsep monitor, which
   will ensure that pam_session_close is called as root.  Patch from Tomas
   Mraz.

20080309
 - (dtucker) [configure.ac] It turns out gcc's -fstack-protector-all doesn't
   always work for all platforms and versions, so test what we can and
   add a configure flag to turn it of if needed.  ok djm@
 - (dtucker) [openbsd-compat/port-aix.{c,h}] Remove AIX specific initgroups
   implementation.  It's not needed to fix bug #1081 and breaks the build
   on some AIX configurations.
 - (dtucker) [openbsd-compat/regress/strtonumtest.c] Bug #1347: Use platform's
   equivalent of LLONG_MAX for the compat regression tests, which makes them
   run on AIX and HP-UX.  Patch from David Leonard.
 - (dtucker) [configure.ac] Run stack-protector tests with -Werror to catch
   platforms where gcc understands the option but it's not supported (and
   thus generates a warning).

20080307
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2008/02/11 07:58:28
     [ssh.1 sshd.8 sshd_config.5]
     bump Mdocdate for pages committed in "febuary", necessary because
     of a typo in rcs.c;
   - djm@cvs.openbsd.org 2008/02/13 22:38:17
     [servconf.h session.c sshd.c]
     rekey arc4random and OpenSSL RNG in postauth child
     closefrom fds > 2 before shell/command execution
     ok markus@
   - mbalmer@cvs.openbsd.org 2008/02/14 13:10:31
     [sshd.c]
     When started in configuration test mode (-t) do not check that sshd is